--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,10 @@ hostel/migrations/__init__.py
 visitor/migrations/0014_auto_20180404_0013.py
 visitor/migrations/0013_auto_20180404_0013.py
 visitor/migrations/0012_auto_20180404_0000.py
+visitor/migrations/0017_auto_20180404_0027.py
+visitor/migrations/0015_auto_20180404_0024.py
+visitor/migrations/0016_auto_20180404_0026.py
+visitor/migrations/0018_auto_20180404_0046.py
+visitor/migrations/
+hostel/migrations/
+.idea/
