--- a/requirements.txt
+++ b/requirements.txt
@@ -1,110 +1,2 @@
-altgraph==0.15
-asn1crypto==0.24.0
-attrs==17.4.0
-Automat==0.6.0
-beautifulsoup4==4.6.0
-bleach==2.1.1
-branca==0.2.0
-cachetools==2.0.1
-certifi==2018.1.18
-cffi==1.11.4
-chardet==3.0.4
-colorama==0.3.9
-ConfigArgParse==0.12.0
-constantly==15.1.0
-cryptography==2.1.4
-cssselect==1.0.3
-cycler==0.10.0
-decorator==4.1.2
 Django==2.0
-entrypoints==0.2.3
-et-xmlfile==1.0.1
-ez-setup==0.9
-folium==0.5.0
-future==0.16.0
-geopy==1.11.0
-google-auth==1.4.1
-google-auth-oauthlib==0.2.0
-html5lib==1.0b10
-hyperlink==17.3.1
-idna==2.6
-incremental==17.5.0
-ipykernel==4.6.1
-ipython==6.2.1
-ipython-genutils==0.2.0
-ipywidgets==7.0.3
-jdcal==1.3
-jedi==0.11.0
-Jinja2==2.9.6
-jsonschema==2.6.0
-jupyter==1.0.0
-jupyter-client==5.1.0
-jupyter-console==5.2.0
-jupyter-core==4.3.0
-keyring==10.4.0
-lxml==4.1.1
-macholib==1.9
-MarkupSafe==1.0
-matplotlib==2.1.2
-mistune==0.8
-mpmath==1.0.0
-nbconvert==5.3.1
-nbformat==4.4.0
-notebook==5.2.0
-numpy==1.13.3
-oauthlib==2.0.6
-opencv-python==3.3.0.10
-openpyxl==2.5.0
-pandas==0.21.0
-pandocfilters==1.4.2
-parsel==1.4.0
-parso==0.1.0
-pbr==3.1.1
-pefile==2017.11.5
-pickleshare==0.7.4
-polls==0.0.4
-prompt-toolkit==1.0.15
-py2exe==0.9.2.2
-pyasn1==0.4.2
-pyasn1-modules==0.2.1
-pycparser==2.18
-PyDispatcher==2.0.5
-Pygments==2.2.0
-PyInstaller==3.3.1
-pyOpenSSL==17.5.0
-pyparsing==2.2.0
-pyperclip==1.6.0
-pypiwin32==220
-PyQt5==5.10
-python-dateutil==2.6.1
-pytz==2017.2
-pywin32-ctypes==0.1.2
-pyzmq==16.0.2
-qtconsole==4.3.1
-queuelib==1.4.2
-requests==2.18.4
-requests-oauthlib==0.8.0
-rsa==3.4.2
-Scrapy==1.5.0
-selenium==3.9.0
-service-identity==17.0.0
-simplegeneric==0.8.1
-sip==4.19.7
-six==1.11.0
-stevedore==1.28.0
-sympy==1.1.1
-testpath==0.3.1
-tornado==4.5.2
-traitlets==4.3.2
-Twisted==17.9.0
-Unidecode==1.0.22
-urllib3==1.22
-virtualenv==15.1.0
-virtualenv-clone==0.2.6
-virtualenvwrapper==4.8.2
-w3lib==1.18.0
-wcwidth==0.1.7
-webencodings==0.5.1
-widgetsnbextension==3.0.6
-xlrd==1.1.0
-zope.interface==4.4.3
+social-auth-app-django
